.provarCaches/00D5f000005vwGkEAI/objects/rstk__fsoackd__c.object
<CustomObject>
    <description>fsoackd__c</description>
    <fields>
        <fullName>rstk__address1__c</fullName>
        <inlineHelpText>Acknowledgement Address Line 1</inlineHelpText>
        <label>Ship To Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address2__c</fullName>
        <inlineHelpText>Acknowledgement Address Line 2</inlineHelpText>
        <label>Ship To Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__address3__c</fullName>
        <inlineHelpText>Acknowledgement Address Line 3</inlineHelpText>
        <label>Ship To Address Line 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__agreement__c</fullName>
        <inlineHelpText>Acknowledgement Customer Agreement</inlineHelpText>
        <label>Agreement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__carrier__c</fullName>
        <inlineHelpText>Acknowledgement Carrier</inlineHelpText>
        <label>Carrier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__city__c</fullName>
        <inlineHelpText>Acknowledgement City</inlineHelpText>
        <label>Ship To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__country__c</fullName>
        <inlineHelpText>Acknowledgement Country</inlineHelpText>
        <label>Ship To Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custpo__c</fullName>
        <inlineHelpText>Acknowledgement Customer PO</inlineHelpText>
        <label>Customer PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custproddesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custprodname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Customer Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custref__c</fullName>
        <inlineHelpText>Acknowledgement Customer Reference</inlineHelpText>
        <label>Customer Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__custrev__c</fullName>
        <inlineHelpText>Acknowledgement Customer Revision</inlineHelpText>
        <label>Customer Order Line Rev</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__discountamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Discount Amount</inlineHelpText>
        <label>Discount Amt</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discountamtcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Discount Amount - Customer Currency</inlineHelpText>
        <label>Discount Amt - Customer Currency</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__discountpct__c</fullName>
        <inlineHelpText>Acknowledgement Discount Percentage</inlineHelpText>
        <label>Discount Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__division__c</fullName>
        <inlineHelpText>Acknowledgement Division</inlineHelpText>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__duedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__email__c</fullName>
        <inlineHelpText>Acknowledgement Email Address</inlineHelpText>
        <label>Ship To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__extcomment__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid or the externalid field itself is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__fax__c</fullName>
        <inlineHelpText>Acknowledgement Fax</inlineHelpText>
        <label>Ship To Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__fob__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>FOB</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__freightamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Freight Amount</inlineHelpText>
        <label>Freight Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightamtcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Freight Amount - Customer Currency</inlineHelpText>
        <label>Freight Amount - Customer Currency</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__freightterms__c</fullName>
        <inlineHelpText>Acknowledgement Freight Terms</inlineHelpText>
        <label>Freight Terms</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_discountamtcc__c</fullName>
        <formula>rstk__discountamt__c * rstk__fsoackd_header__r.rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_freightamtcc__c</fullName>
        <formula>rstk__freightamt__c * rstk__fsoackd_header__r.rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_handlingamtcc__c</fullName>
        <formula>rstk__handlingamt__c * rstk__fsoackd_header__r.rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_header__c</fullName>
        <inlineHelpText>Acknowledgement Header</inlineHelpText>
        <label>SO Acknowledgement Header</label>
        <referenceTo>rstk__fsoackh__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Details</relationshipLabel>
        <relationshipName>lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_longdesc__c</fullName>
        <inlineHelpText>Long Description</inlineHelpText>
        <label>Extended Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_ovrtaxamtcc__c</fullName>
        <formula>rstk__overridetaxamount__c * rstk__fsoackd_header__r.rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_packageamtcc__c</fullName>
        <formula>rstk__packageamt__c * rstk__fsoackd_header__r.rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_pricecc__c</fullName>
        <formula>rstk__unitprice__c * rstk__fsoackd_header__r.rstk__fsoackh_currexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Details</relationshipLabel>
        <relationshipName>SO_Acknowledgement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fsoackd_sorma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RMA Detail</label>
        <referenceTo>rstk__sorma__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Details</relationshipLabel>
        <relationshipName>SO_Acknowledgement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Handling Amount</inlineHelpText>
        <label>Handling Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__handlingamtcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Handling Amount - Customer Currency</inlineHelpText>
        <label>Handling Amount - Customer Currency</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__line__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Line</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__linetype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Comment</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
                <value>
                    <fullName>PrepaymentApplied</fullName>
                </value>
                <value>
                    <fullName>Serial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__order__c</fullName>
        <inlineHelpText>Acknowledgement Order Number</inlineHelpText>
        <label>Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__overridetaxamount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Override Tax Amount</inlineHelpText>
        <label>Override Tax Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__overridetaxamountcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Override Tax Amount - Customer Currency</inlineHelpText>
        <label>Override Tax Amount - Customer Currency</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Packaging Amount</inlineHelpText>
        <label>Packaging Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__packageamtcc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Packaging Amount - Customer Currency</inlineHelpText>
        <label>Packaging Amount - Customer Currency</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__phone__c</fullName>
        <inlineHelpText>Acknowledgement Phone</inlineHelpText>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>rstk__ppyamount__c</fullName>
        <label>Prepayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__prodprice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product Sales Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__producstdescr__c</fullName>
        <inlineHelpText>Acknowledgement Product Description</inlineHelpText>
        <label>Product Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__product__c</fullName>
        <inlineHelpText>Acknowledgement Product Number</inlineHelpText>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__qtydecimal__c</fullName>
        <inlineHelpText>Decimal Quantity</inlineHelpText>
        <label>Qty Decimal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__qtyorder__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Acknowledgement Order Quantity</inlineHelpText>
        <label>Qty Ordered</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shiptoname__c</fullName>
        <inlineHelpText>Acknowledgement Ship-to Customer Name</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__shipvia__c</fullName>
        <inlineHelpText>Acknowledgement Ship Via (type)</inlineHelpText>
        <label>Ship Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sorma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>RMA Line</label>
        <referenceTo>rstk__sorma__c</referenceTo>
        <relationshipLabel>SO Acknowledgement Details (RMA Line)</relationshipLabel>
        <relationshipName>sormafsoackd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__state__c</fullName>
        <inlineHelpText>Acknowledgement State</inlineHelpText>
        <label>Ship To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__taxexempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Acknowledgement Indicates Tax Exemption Status</inlineHelpText>
        <label>Tax Exempt (Resale)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__taxrate__c</fullName>
        <inlineHelpText>Acknowledgement Tax Rate</inlineHelpText>
        <label>Sales Tax Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__unitprice__c</fullName>
        <inlineHelpText>Acknowledgement Unit Price</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__unitpricecc__c</fullName>
        <inlineHelpText>Acknowledgement Unit Price - Customer Currency</inlineHelpText>
        <label>Unit Price - Customer Currency</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__uom__c</fullName>
        <inlineHelpText>Acknowledgement Unit of Measure</inlineHelpText>
        <label>Sales UOM</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__zip__c</fullName>
        <inlineHelpText>Acknowledgement Zip Code</inlineHelpText>
        <label>Ship To Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>SO Acknowledgement Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SO Acknowledgement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>